Closed
Bug 1054425
Opened 11 years ago
Closed 11 years ago
cache2: leak in CacheFileMetadata::WriteMetadata
Categories
(Core :: Networking: Cache, defect)
Core
Networking: Cache
Tracking
()
RESOLVED
FIXED
mozilla34
| Tracking | Status | |
|---|---|---|
| firefox32 | --- | fixed |
| firefox33 | --- | fixed |
| firefox34 | --- | fixed |
| firefox-esr31 | --- | unaffected |
People
(Reporter: jduell.mcbugs, Assigned: michal)
References
Details
Attachments
(1 file)
|
3.19 KB,
patch
|
jduell.mcbugs
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
ASAN testing is showing 8720 byte(s) leaked in 68 allocation(s) during
00:09:25 WARNING - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at mozilla::net::CacheFileMetadata::WriteMetadata, mozilla::net::CacheFile::WriteMetadataIfNeededLocked, mozilla::net::CacheFile::~CacheFile
00:09:25 INFO - runtests.py | Application ran for: 0:41:27.008357
Looks like this is the test that fails (note IPDL-looking error):
0:09:21 INFO - 4821 INFO TEST-OK | /tests/dom/base/test/test_writable-replaceable.html | took 231ms
00:09:21 INFO - 4822 INFO ###!!! [Parent][OnMaybeDequeueOne] Error: Channel closing: too late to send/recv, messages will be lost
| Reporter | ||
Comment 1•11 years ago
|
||
Looks like this happens in test_storage_session_setitem_js.html too. See mochitest 1 and 2 failures in
https://tbpl.mozilla.org/?tree=Try&rev=a1ea7549c4fd
| Reporter | ||
Comment 2•11 years ago
|
||
And also test_hiddenPrivateWindow.xul (see "oth" test in ASAN run).
| Assignee | ||
Comment 3•11 years ago
|
||
Attachment #8474199 -
Flags: review?(jduell.mcbugs)
| Reporter | ||
Comment 4•11 years ago
|
||
Comment on attachment 8474199 [details] [diff] [review]
fix
Review of attachment 8474199 [details] [diff] [review]:
-----------------------------------------------------------------
I think this looks good. Pushed a try build with this and Steve's patch for the other bug in bug 1053517.
Attachment #8474199 -
Flags: review?(jduell.mcbugs) → review+
| Reporter | ||
Comment 5•11 years ago
|
||
Try run looks good (at least for this bug, i.e. the ASAN results):
https://tbpl.mozilla.org/?tree=Try&rev=fe5dcd1b7abb
| Assignee | ||
Comment 6•11 years ago
|
||
Comment 7•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Comment 8•11 years ago
|
||
ASAN runs look good on Aurora/Beta Try pushes. I think is ready for an uplift nomination.
status-firefox32:
--- → affected
status-firefox33:
--- → affected
status-firefox34:
--- → fixed
status-firefox-esr31:
--- → unaffected
Flags: needinfo?(michal.novotny)
| Reporter | ||
Comment 9•11 years ago
|
||
Comment on attachment 8474199 [details] [diff] [review]
fix
Approval Request Comment
[Feature/regressing bug #]: cache2
[User impact if declined]: memory leak
[Describe test coverage new/current, TBPL]: ASAN test coverage
[Risks and why]: low, fairly simple leak fix.
[String/UUID change made/needed]: none
Attachment #8474199 -
Flags: approval-mozilla-beta?
Attachment #8474199 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(michal.novotny)
Updated•11 years ago
|
Attachment #8474199 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•11 years ago
|
||
Updated•11 years ago
|
Attachment #8474199 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•11 years ago
|
||
Updated•11 years ago
|
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•