Bug 1054425 - cache2: leak in CacheFileMetadata::WriteMetadata, r=jduell